--- a/data/style.css
+++ b/data/style.css
@@ -4,7 +4,7 @@ html, body {
   width: 400px;
   margin-left:auto;
   margin-right:auto;
-  font-family: Fantasy;
+  font-family:  Arial, sans-serif;
   font-size: 12px;
   }
   
