--- a/data/style.css
+++ b/data/style.css
@@ -8,12 +8,18 @@ html, body {
   font-size: 12px;
   }
   
+
   div{
     background-color: #f8f9ff;
   }
 
+  b{
+    padding: 3px;
+  }
+
   th, td {
     text-align: left;
+    padding: 3px;
   }
 
 
@@ -85,6 +91,7 @@ html, body {
 
 input:checked + .slider {
   background-color: #2196F3;
+  background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
 }
 
 input:focus + .slider {
@@ -96,3 +103,27 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
+
+button{
+box-shadow: 0px 1px 0px -50px #f0f7fa;
+background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+background-color:#33bdef;
+border-radius:23px;
+border:1px solid #057fd0;
+display:inline-block;
+cursor:pointer;
+color:#ffffff;
+font-family:Arial;
+font-size:15px;
+font-weight:bold;
+padding:10px 40px;
+text-decoration:none;
+text-shadow:0px -1px 0px #5b6178;
+}
+
+input {
+  border-radius:5px;
+} 
+
+
+
